Fixed popover-menu, date-picker, collapsed button

--- a/src/layouts/SidebarLayout/Sidebar/NavLinkMenu/style.scss
+++ b/src/layouts/SidebarLayout/Sidebar/NavLinkMenu/style.scss
@@ -18,7 +18,7 @@
     }
 
     .nav-link-items {
-        margin-left: 40px;
+        margin-left: 30px;
     }
 }
 
